--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <div id="tribute-info">
 <h3>Here is a brief history of Nelson Mandela's life:</h3>
 <ul>
-    <li><strong>Date of Birth:</strong> July, 1918</li>
-    <li><strong>Nationality:</strong> South Africa</li>
-    <li><strong>Education:</strong> Law degree in 1942</li>
-    <li><strong>Imprisonment:</strong> 1963 - 1990</li>
-    <li><strong>President</strong> 1994</li>
-    <li><strong>Retirement:</strong> 1999</li>
-    <li><strong>Died:</strong> 13th December, 2013</li>
+    <li><strong>Date of Birth:</strong> July, 1918</li><br>
+    <li><strong>Nationality:</strong> South Africa</li><br>
+    <li><strong>Education:</strong> Law degree in 1942</li><br>
+    <li><strong>Imprisonment:</strong> 1963 - 1990</li><br>
+    <li><strong>President</strong> 1994</li><br>
+    <li><strong>Retirement:</strong> 1999</li><br>
+    <li><strong>Died:</strong> 13th December, 2013</li><br>
 </ul>
 <p><i>His negotiations in the early 1990s with South African Pres. F.W. de Klerk helped end the country’s apartheid system of racial segregation and ushered in a peaceful transition to majority rule.<br><br>
-    Mandela and de Klerk were jointly awarded the Nobel Prize for Peace in 1993 for their efforts.</i></p>
+    Mandela and de Klerk were jointly awarded the Nobel Prize for Peace in 1993 for their efforts.</i></p><br><br>
 </div>
-<p>Find additional information about <a id="tribute-link" href="https://www.britannica.com/biography/Nelson-Mandela" target="_blank">Nelson Mandela tribute</a></p>
+<p>Find additional information about <a id="tribute-link" href="https://www.britannica.com/biography/Nelson-Mandela" target="_blank">Nelson Mandela tribute</a></p><br><br>
  </main>   
 </body>
 </html>
